# motor_stage_ui

./: README.md  configuration.yaml  motor_controller.py  motor_stage_gui.py  pyproject.toml  setup.py
.github/workflows/: pre-commit.yml  pre_commit.yml  tests.yml  workflows.yml
motor_stage_ui/: PIStagesInterface.py  configuration.yaml  logger.py  motor_controller.py  motor_stage_gui.py  motor_stage_terminal.py  pi_stages_interface.py
motor_stage_ui/constellation/: __main__.py  meson.build  motor_config.toml  motor_satellite.py
motor_stage_ui/test/: test_configuration.yaml  test_gui.py  test_pi_stage_interface.py  test_terminal_ui.py  utils.py
motor_stage_ui/tests/: interface_test.py  utils.py
